[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = [
    "macros",
    "rt-threaded",
    "sync",
    "time",
] }
warp = "0.3.7"
chrono = "0.4"
jsonwebtoken = "9.3.1"
thiserror = "1.0"
# serde_json is just for the example, not required in general
serde_json = "1.0"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'
